# forza_quattro

./: .gitignore  CMakeLists.txt  README.md  piksel_example.cpp
doc/_media/: solved_forza_quattro.js
docs/: index.html  index.md
include/forza_quattro/: board.h
latex/: forza_quattro.tex  mysettings.tex
solution/: CMakeLists.txt  piksel
solution/include/forza_quattro/: board.h  forza_quattro.h  mouse_player.h  player.h  random_player.h
solution/src/: board.cpp  forza_quattro.cpp  mouse_player.cpp  piksel_example.cpp  player.cpp  random_player.cpp
src/: board.cpp  forza_quattro_main.cpp  piksel_example.cpp
